--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body{
   text-align: center;
-  font-family: Helvetica, sans-serif;;
+  font-family: Helvetica, sans-serif;
   margin-left: 8px;
   margin-right: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
 }
 .bg{
-  background-image: url("C:/Users/GURUSAMY/Desktop/broadway/css/images/the-flatiron-building.png");
+  background-image: url("./images/the-flatiron-building.png");
   color: white;
 
 }
